# docfx-to-wikijs

./: .gitignore  .pytest.ini  .ruff.toml  AGENTS.md  README.md  dev.py  docfx.json  main.py  pyproject.toml  pytest.ini
.github/workflows/: ci-gate.yml
assemblies/: README.txt
docs/: global-namespace-subfolder-generation.md
scripts/: ci-gate.sh  docfx_yml_to_wikijs.py  report_coverage_failures.py  run_checks.sh
src/: AGENTS.md  analyzer.py  as_text.py  build_index.py  build_link_targets.py  build_ns_graph.py  canonicalize_root_name.py  cluster_report.py  compute_config_hash.py  deep_merge.py  docfx_yml_to_wikijs.py  dot_safe.py  global_config.py  global_map.py  global_namespace_map.py  global_path_resolver.py  header_slug.py  is_member_kind.py  is_namespace_kind.py  is_type_kind.py  item_info.py  iter_main_items.py  link_target.py  load_config.py  load_managed_reference.py  md_codeblock.py  md_table.py  metadata_index.py  models.py  namespace_of.py  normalization_pass.py  normalization_root.py  output_file_for_page.py  page_path_for_fullname.py  project_token_boundaries.py  render_namespace_page.py  render_type_page.py  reporting.py  resolution_result.py  rewrite_xrefs.py  (+8 more)
tasks/global-namespace-refactor/: ACT.md  PLAN.md  RESEARCH.md  TODO.md
tasks/refine-global-clustering/: PLAN.md  RESEARCH.md  TODO.md
tests/: test_analyzer.py  test_cluster_report.py  test_docfx_yml_to_wikijs.py  test_global_config.py  test_global_map.py  test_global_path_resolver.py  test_metadata_index.py  test_normalization_pass.py  test_stub_generator.py  test_text_processing.py
